syntax = "proto2";

package msdbcall;

option go_package = ".;msdbcall";

import "model/model.proto";

message CreateUserReq {
    optional model.User user = 1;
}

message CreateUserResp {
    optional string data = 1; // 返回新插入的user的json
    optional int32 code = 2;
}

message AddDishReq {
    optional model.Dish dish = 1;
}

message AddDishResp {
    optional string data = 1;
}

message CheckUserPasswordReq {
    optional string name = 1;
    optional string password = 2;
}

message CheckUserPasswordResp {
    optional bool success = 1;
}

message CheckUserNameUniqueReq {
    optional string name = 1;
}

message CheckUserNameUniqueResp {
    optional bool unique = 1;
}

service MSDBCall {
    rpc CreateUser(CreateUserReq) returns(CreateUserResp);
    rpc AddDish(AddDishReq) returns(AddDishResp);
    rpc CheckUserPassword(CheckUserPasswordReq) returns(CheckUserPasswordResp);
    rpc CheckUserNameUnique(CheckUserNameUniqueReq) returns(CheckUserNameUniqueResp);
}
